# highs-sys

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  install-dependencies.sh
.github/workflows/: rust.yml
src/: lib.rs
tests/: test_highs_call.rs  test_highs_functions.rs
