[package]
name = "highs-sys"
version = "0.0.1"
authors = ["Ophir LOJKINE"]
edition = "2018"
description = " Rust binding for the HiGHS linear programming solver"
license = "MIT"
repository = "https://github.com/lovasoa/highs-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

[build-dependencies]
bindgen = "0.57"
cmake = "0.1"