[package]
name = "highs-sys"
version = "0.1.4"
authors = ["Ophir LOJKINE"]
edition = "2018"
description = "Rust binding for the HiGHS linear programming solver. See http://highs.dev."
license = "MIT"
repository = "https://github.com/rust-or/highs-sys"
keywords = ["linear-programming", "optimization", "math", "solver"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59.1"
cmake = "0.1"
